objects/PMC_CPQ_BRExpirationValidityTable__mdt.object
<CustomObject>
    <description>This custom metadata table will be used to store the number of days from which the Quote should expire based on Quote Classification.</description>
    <fields>
        <fullName>PMC_CPQ_BusinessType__c</fullName>
        <description>The Primary Business type of the metadata record.</description>
        <label>Business Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Classification__c</fullName>
        <description>The type of Quote Classification.</description>
        <label>Classification</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NumberOfDays__c</fullName>
        <description>The number of days from which the quote should be expired.</description>
        <label>Number Of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BR Expiration Validity Table</label>
    <pluralLabel>BR Expiration Validity Tables</pluralLabel>
</CustomObject>